3. Delete, Close icons will represents actual user permissions. https://github.com/LiveHelperChat/livehelperchat/issues/614
4. Online users list will have lest icons in last column.
5. New maxmind database for countries
6. Identifier variable for forms.

execute doc/update_db/update_100.sql for update

2.21v

1. Option to change front page tabs order in chat configuraiton section. (Misc)
https://github.com/LiveHelperChat/livehelperchat/issues/593
2. Option to set Sender e-mail for all aplication.
https://github.com/LiveHelperChat/livehelperchat/issues/598

execute doc/update_db/update_99.sql for update

2.20v

1. Speech to text support. Only google chrome at the moment has this hTML5 API
2. Theme variable was not forwarded internally. (During read operator message action)
3. Relative position for iframe. Some sites are using nonsense iframe positions.
4. Operator typing issue was fixed. Operator typing message was shown and was not shown again even if operator was still typing
5. Text preview position was changed.
6. Various co-browsing improvements.

execute doc/update_db/update_98.sql for update


2.19v

1. More attributes for themes
Restore, Popup, Close, Miminize images
Hide close, Hide popup options in theme.
Header widget height and padding options
Main widget border width option

2. Cookie conflict fix with third party libraries

3. Now operator can follow user scrollbar position

execute doc/update_db/update_97.sql for update

2.18v

Co-Browsing enhancement release part 2
1. Select box change will be synced to user browser also.
2. If your site is using jQuery JS library highligh elements selection will be more precise. 99.99% of accuracy. 
3. User actions on forms will be synced to operator browser. That means while user is filling a form you will see what fields he fills instantly, 
what checkboxes checks and so on. This feature requires jQuery JS library on remote site.